--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "axios": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-collapsible-tab-view": "^5.0.0-rc.13",
+    "react-native-form-validator": "^0.5.1",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
